[package]
name = "bounce-iterator"
version = "0.1.0"
edition = "2021"
description = "Bouncing iterator for concisely mutably revisiting an array of pointers"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
